add pictures an array of skateparks and got the button on the login page to fire

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -1,3 +1,28 @@
 <div class="loginBackground">
 
+
+
+
+<select name="state" ng-model="state">
+	<option value="">State</option>
+	<option value="california">California</option>
+	<option value="utah">Utah</option>
+	<option value="nevada">Nevada</option>
+	
+</select>
+<button ng-click="dude()">HeckkaPushThisButton</button>
+
+
+
+
+<!--<a href="/#/state/california">Hella</a>-->
+
+
+
+
+
+
+
+
+
 </div>
