--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,29 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .loginBackground {
 	background: url(images/a.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
+  /*-webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover;
+  -o-background-size: cover;*/
   background-size: cover;
   height: 1000px;
   
 }
 
-.hi {
-	font-size: 50px;
-  margin-top: 0px;
+
+.mainBackground {
+	background: url(images/c.jpg) no-repeat center center fixed; 
+  /*-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;*/
+  background-size: cover;
+  height: 1000px;
+  
+  
+  /*background-color: white;*/
 }
