the button on the first page will now log the select box

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -10,7 +10,7 @@
 	<option value="nevada">Nevada</option>
 	
 </select>
-<button ng-click="dude()">HeckkaPushThisButton</button>
+<button ng-click="changeState(state)">HeckkaPushThisButton</button>
 
 
 
