changed most of my guts to the mainCtrl and got the specific parks from states ish trying to figure out how to call two functions with one button click i am thinking of wrapping both of the functions in one function

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -10,14 +10,15 @@
 	<option value="nevada">Nevada</option>
 	
 </select>
-<button ng-click="changeState(state)">HeckkaPushThisButton</button>
+<button ng-click="getParks(state)">HeckkaPushThisButton</button>
 
+<!-- in the above button the click was ng-click="changeState(state)" 
+so change it back, even though right now that fnction doesn't do anything' -->
 
-
+<!-- try wrapping the two functions that you need
+so you can do them both with one click. -->
 
 <!--<a href="/#/state/california">Hella</a>-->
-
-
 
 
 
