check the comments in loginTmpl

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -12,11 +12,16 @@
 </select>
 <button ng-click="getParks(state)">HeckkaPushThisButton</button>
 
-<!-- in the above button the click was ng-click="changeState(state)" 
-so change it back, even though right now that fnction doesn't do anything' -->
+			<!-- in the above button the click was ng-click="changeState(state)" 
+			so change it back, even though right now that fnction doesn't do anything' -->
 
-<!-- try wrapping the two functions that you need
-so you can do them both with one click. -->
+		<!-- try wrapping the two functions that you need
+		so you can do them both with one click. -->
+
+<!-- ^^the two above can be deleted if this wrapperFunc works! ^^ 
+also the wrapper function isn't really working so i changed it back 
+to getParks(state)-->
+
 
 <!--<a href="/#/state/california">Hella</a>-->
 
