--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -5,26 +5,13 @@
 
 <select name="state" ng-model="state">
 	<option value="">State</option>
-	<option value="california">California</option>
-	<option value="utah">Utah</option>
-	<option value="nevada">Nevada</option>
+	<option ng-value="state" ng-repeat="state in states">{{state}}</option>
+	
 	
 </select>
-<button ng-click="getParks(state)">HeckkaPushThisButton</button>
+<button ng-click="changeState(state)">HeckkaPushThisButton</button>
 
-			<!-- in the above button the click was ng-click="changeState(state)" 
-			so change it back, even though right now that fnction doesn't do anything' -->
-
-		<!-- try wrapping the two functions that you need
-		so you can do them both with one click. -->
-
-<!-- ^^the two above can be deleted if this wrapperFunc works! ^^ 
-also the wrapper function isn't really working so i changed it back 
-to getParks(state)-->
-
-
-<!--<a href="/#/state/california">Hella</a>-->
-
+			
 
 
 
