--- a/templates/stateTmpl.html
+++ b/templates/stateTmpl.html
@@ -1,7 +1,9 @@
-<div>state :{{state}}
+<div class="stateBackground">
+
+<div><h1>stateParks:</h1> {{stateParks}}
 </div>
-<div>state: {{stateParks}}
-</div>
-<div>
-skateparks: {{skateparks}}
+
+
+<div ng-repeat="park in stateParks"></div>
+
 </div>
