time to celebrate i have gotten the single park data onto the next controller and have ng sourced to get the picture on there

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -5,7 +5,7 @@
 
 <select name="state" ng-model="state">
 	<option value="">State</option>
-	<option ng-value="state" ng-repeat="state in states">{{state}}</option>
+	<option ng-value="state" ng-repeat="stat in states">{{stat}}</option>
 	
 	
 </select>
