--- a/templates/parksTmpl.html
+++ b/templates/parksTmpl.html
@@ -1,1 +1,6 @@
-miles wishes he was shredding at {{park}}
+miles wishes he was shredding at {{singlePark.name}}
+
+{{singlePark.location}}
+
+
+<div><img ng-src="{{singlePark.pic}}"></div>
