--- a/templates/stateTmpl.html
+++ b/templates/stateTmpl.html
@@ -1,14 +1,16 @@
 <div class="stateBackground">
 
 
+<div class="stateTmpl" ng-repeat="park in stateParks">
 
 
-
-
-<div ng-repeat="park in stateParks">
+<div class="stateBox">
+<a href="#/state/{{park.state}}/{{park.name}}">{{park.name}}</a><br>
 <img ng-src="{{park.pic}}"><br>
-name: <a href="#/state/{{park.state}}/{{park.name}}">{{park.name}}</a><br>
 state: {{park.state}}<br>
 address: {{park.address}}<br>
 </div>
+
+
+
 </div>
