i have finally got the specific comments working for each skate park woo hoo breh that one was a doosey

--- a/templates/parksTmpl.html
+++ b/templates/parksTmpl.html
@@ -3,11 +3,12 @@ miles wishes he was shredding at {{singlePark.name}} {{singlePark.address}}
 
 <div><img ng-src="{{singlePark.pic}}"></div>
 
-<button ng-click="sendMessageToService()"></button>
-	<input type="text" placeholder="comment..." ng-model="message">
-	<input type="text" placeholder="Username..." ng-model="user">
+
+<input type="text" placeholder="comment..." ng-model="message">
+<input type="text" placeholder="Username..." ng-model="user">
+<button ng-click="sendMessageToService()">SubmitBrehh</button>
 
 
-<p ng-repeat="message in messages">{{message.text}}
-	<br> {{message.user}}
+<p ng-repeat="parkMessage in parkMessages">{{parkMessage.text}}
+	<br> {{parkMessage.user}}
 </p>
