css messing around

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,7 @@ body, html {
 
 .loginBackground {
 	background: url(images/a.jpg) no-repeat center center fixed; 
-  /*-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;*/
+  
   background-size: cover;
   height: 1000px;
   
@@ -18,9 +16,7 @@ body, html {
 
 .stateBackground {
 	background: url(images/c.jpg) no-repeat center center fixed; 
-  /*-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;*/
+  
   background-size: cover;
   height: 2000px; 
   text-align: center;
@@ -44,10 +40,52 @@ body, html {
   text-decoration: none;
   font-size: 40px;
   color: black;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+  /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
+  font-family: jaf-bernino-sans-condensed, helvetica, arial, sans-serif;
+      text-transform: uppercase;
+  font-weight: bold;
 }
 
 .stateBoxA {
   margin-bottom: 15px;
+}
+
+.parkHeader {
+  color: black;
+
+  background: white;
+
+}
+
+.parksContainer {
+  background: url(images/b.jpg) no-repeat center center fixed; 
+  height: 1000px;
+  background-size: cover;
+  text-align: center;
+
+}
+
+.parkBox {
+  background: white;
+  width: 60%;
+  border-radius: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.parkBox img {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.inputBoxes {
+  padding: 10px;
+  border: solid 1px #fff;
+  border-radius: 10px;
+  box-shadow: inset 1px 1px 2px 0 #707070;
+  transition: box-shadow 0.3s;
+}
+.style-5 input[type="text"]:focus,
+.style-5 input[type="text"].focus {
+  box-shadow: inset 1px 1px 2px 0 #c9c9c9;
+
 }
