--- a/templates/parksTmpl.html
+++ b/templates/parksTmpl.html
@@ -1,14 +1,23 @@
-miles wishes he was shredding at {{singlePark.name}} {{singlePark.address}}
+<div class="parksContainer">
+	<div class="parkHeader">
+		<h1>{{singlePark.name}}</h1><br>{{singlePark.address}}
+
+	</div>
+
+	<div class="parkBox">
+		<div><img ng-src="{{singlePark.pic}}"></div>
+
+		<div class="inputBoxes">
+			<input type="text" placeholder="comment..." ng-model="message">
+			<input type="text" placeholder="Username..." ng-model="user">
+		</div>
+		<button ng-click="sendMessageToService()">SubmitBrehh</button>
 
 
-<div><img ng-src="{{singlePark.pic}}"></div>
+		<p ng-repeat="parkMessage in parkMessages">{{parkMessage.text}}
+			<br> {{parkMessage.user}}
+			<br>{{singlePark.name}}
+		</p>
 
-
-<input type="text" placeholder="comment..." ng-model="message">
-<input type="text" placeholder="Username..." ng-model="user">
-<button ng-click="sendMessageToService()">SubmitBrehh</button>
-
-
-<p ng-repeat="parkMessage in parkMessages">{{parkMessage.text}}
-	<br> {{parkMessage.user}}
-</p>
+	</div>
+</div>
