--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -9,7 +9,7 @@
 	
 	
 </select>
-<button ng-click="changeState(state)">HeckkaPushThisButton</button>
+<button ng-disabled="value === state" ng-click="changeState(state)">HeckkaPushThisButton</button>
 
 			
 
