used one directive to get a hideous footer on the page now goin to get main login to use a submit then i will work on second directive

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -3,6 +3,7 @@
 
 
 
+<!-- try ng submit with form-->
 <select name="state" ng-model="state">
 	<option value="">State</option>
 	<option ng-value="state" ng-repeat="stat in states">{{stat}}</option>
@@ -19,3 +20,4 @@
 
 
 </div>
+
