--- a/templates/parksTmpl.html
+++ b/templates/parksTmpl.html
@@ -12,7 +12,7 @@
 			<form ng-submit="sendMessageToService()">
 				<input type="text" placeholder="comment..." ng-model="message">
 				<input type="text" placeholder="Username..." ng-model="user">
-				<button ng-click="sendMessageToService()">SubmitBrehh</button>
+				<button>SubmitBrehh</button>
 
 			</form>
 		</div>
@@ -25,4 +25,6 @@
 		</p>
 
 	</div>
+		<footer-dir></footer-dir>
+
 </div>
