--- a/templates/stateTmpl.html
+++ b/templates/stateTmpl.html
@@ -15,7 +15,12 @@
 				<br> address: {{park.address}}</div>
 		</div>
 
+	</div>
+
+	<footer-dir></footer-dir>
+	
 </div>
 
-<!--------------------------------------------------------------------- -->
 
+	<!--------------------------------------------------------------------- -->
+	
