--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body, html {
   padding: 0;
   width: 100%;
   height: 100%;
+  min-height: 100%;
+  position: relative;
 }
 
 .loginBackground {
@@ -20,6 +22,7 @@ body, html {
   background-size: cover;
   height: 2000px; 
   text-align: center;
+  position: relative;
 
 }
 
@@ -62,7 +65,7 @@ body, html {
   height: 1000px;
   background-size: cover;
   text-align: center;
-
+  position: relative;
 }
 
 .parkBox {
@@ -91,4 +94,12 @@ body, html {
 
 }
 
-
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    color: blue;
+    background-color: red;
+}
