added a addnewpark directive but it is still not functioning i am working on the functions and the ng submit

--- a/templates/stateTmpl.html
+++ b/templates/stateTmpl.html
@@ -16,11 +16,12 @@
 		</div>
 
 	</div>
-
+	<div>
+		<add-park-dir></add-park-dir>
+	</div>
 	<footer-dir></footer-dir>
-	
+
 </div>
 
 
-	<!--------------------------------------------------------------------- -->
-	
+<!--------------------------------------------------------------------- -->
