--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body, html {
   box-shadow: inset 1px 1px 2px 0 #c9c9c9;
 
 }
-
+/* directive ish */
 footer {
     position: absolute;
     left: 0;
@@ -102,4 +102,13 @@ footer {
     width: 100%;
     color: blue;
     background-color: red;
+}
+
+
+.addAPark {
+  background: white;
+  width: 40%;
+  border-radius: 20px;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
