--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -5,7 +5,7 @@
 
 	<!-- try ng submit with form-->
 	<form ng-submit="changeState(state)">
-		<select name="state" ng-model="state">
+		<select ng-change="changeState(state)"name="state" ng-model="state">
 			<option value="">State</option>
 			<option ng-value="state" ng-repeat="stat in states">{{stat}}</option>
 
