--- a/templates/addParkDir.html
+++ b/templates/addParkDir.html
@@ -5,7 +5,7 @@
 		<h4>Name: </h4>
 		<input type="text" placeholder="name..." ng-model="newParkName">
 		<h6>Address: </h6>
-		<input type="text" placeholder="adress..." ng-model="newParkAddress">
+		<input type="text" placeholder="address..." ng-model="newParkAddress">
 		<h6>State: </h6>
 		<input type="text" placeholder="state..." ng-model="newParkState">
 		<h6>Img URL: </h6>
