--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body, html {
   margin-top: 50px;
   border-radius: 20px;
   padding: 10px 0 10px 0;
+  border: 1px solid #707070;
 }
 
 .stateBox img {
@@ -74,6 +75,7 @@ body, html {
   border-radius: 20px;
   margin: 0 auto;
   margin-top: 20px;
+  border: 1px solid #707070;
 }
 .parkBox img {
   padding-top: 20px;
@@ -84,7 +86,7 @@ body, html {
 .inputBoxes {
   padding: 10px;
   border: solid 1px #fff;
-  border-radius: 10px;
+  border-radius: 16px;
   box-shadow: inset 1px 1px 2px 0 #707070;
   transition: box-shadow 0.3s;
 }
@@ -109,6 +111,7 @@ footer {
   background: white;
   width: 40%;
   border-radius: 20px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding-bottom: 20px;
+  border: 1px solid #707070;
 }
