--- a/templates/parksTmpl.html
+++ b/templates/parksTmpl.html
@@ -9,7 +9,7 @@
 		<div><img ng-src="{{singlePark.pic}}"></div>
 
 		<div class="inputBoxes">
-			<form ng-submit="sendMessageToService()">
+			<form ng-submit="sendMessageToBackend()">
 				<input type="text" placeholder="comment..." ng-model="message">
 				<input type="text" placeholder="Username..." ng-model="user">
 				<button>SubmitBrehh</button>
