--- a/templates/stateTmpl.html
+++ b/templates/stateTmpl.html
@@ -1,17 +1,17 @@
 <div class="stateBackground">
-
+<div>{{stateName.name}}</div>
 	<div class="stateTmpl" ng-repeat="park in stateParks">
 
 
 		<div class="stateBox">
 			<div class="stateBoxA">
-				<a href="#/state/{{park.state}}/{{park.name}}">{{park.name}}</a>
+				<a href="#/parks/{{thisState}}/{{park.$id}}">{{park.name}}</a>
 				<br>
 			</div>
 			<img ng-src="{{park.pic}}">
 			<br>
-			<div>state: {{park.state}}
-				<br> address: {{park.address}}</div>
+			<div>
+				 address: {{park.address}}</div>
 		</div>
 
 	</div>
