--- a/templates/addParkDir.html
+++ b/templates/addParkDir.html
@@ -3,13 +3,13 @@
 	<h1>Add A Fetchin Park</h1>
 	<form ng-submit="addNewPark()">
 		<h4>Name: </h4>
-		<input type="text" placeholder="name..." ng-model="newParkName">
+		<input type="text" placeholder="name..." ng-model="newPark.name">
 		<h6>Address: </h6>
-		<input type="text" placeholder="address..." ng-model="newParkAddress">
-		<h6>State: </h6>
-		<input type="text" placeholder="state..." ng-model="newParkState">
+		<input type="text" placeholder="address..." ng-model="newPark.address">
+		<!--<h6>State: </h6>-->
+		<!--<input type="text" placeholder="state..." ng-model="newPark.state">-->
 		<h6>Img URL: </h6>
-		<input type="text" placeholder="img url..." ng-model="newParkImgUrl">
+		<input type="text" placeholder="img url..." ng-model="newPark.imgUrl">
 		<button>Add</button>
 	</form>
 	
