got the login page working to where it reroutes to the state page

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -4,22 +4,26 @@
 
 
 	<!-- try ng submit with form-->
-	<!--<form ng-submit="changeState(state)">
-		<select ng-change="changeState(state)"name="state" ng-model="state">
+	<form ng-submit="changeState(state)">
+		<select ng-change="changeState(state)" name="state" ng-model="state">
 			<option value="">State</option>
-			<option ng-value="state" ng-repeat="stat in states">{{stat}}</option>
+			<option ng-value="state.$id" ng-repeat="state in states">{{state.name}}</option>
 		</select>
 
-	</form>-->
-<form ng-submit="addState(stateName)">
-<input type="text" placeholder="state..." ng-model="stateName.name">
-<button>Add</button>
-</form>
+	</form>
+	<!--<select  ng-options="state.$id for state in states"></select>-->
+	
+	
+	
+	<form ng-submit="addState(stateName)">
+		<input type="text" placeholder="state..." ng-model="stateName.name">
+		<button>Add</button>
+	</form>
 <pre>
 	
 	
 	
 </pre>
-<div ng-repeat="state in states" style="color: #fff"> <a href="/#/parks/{{state.$id}}">{{state.name}}</a></div>
+	<div ng-repeat="state in states" style="color: #fff"> <a href="/#/parks/{{state.$id}}">{{state.name}}</a></div>
 
 </div>
