making the css a bit saucier

--- a/templates/parksTmpl.html
+++ b/templates/parksTmpl.html
@@ -6,7 +6,7 @@
 	</div>
 
 	<div class="parkBox">
-		<div><img ng-src="{{singlePark.pic}}"></div>
+		<div><img ng-src="{{singlePark.imgUrl}}"></div>
 
 		<div class="inputBoxes">
 			<form ng-submit="sendMessageToFirebase(newMessage)">
