--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,21 @@ body, html {
   
 }
 
+.stateHeader {
+  background: white;
+  height: 70px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 18px;
+  line-height: 32px;
+  text-transform: uppercase;
+  
+}
 
 .stateBackground {
 	background: url(images/c.jpg) no-repeat center center fixed; 
   
   background-size: cover;
-  height: 2000px; 
+ min-height: 2000px; 
   text-align: center;
   position: relative;
 
@@ -44,8 +53,9 @@ body, html {
   text-decoration: none;
   font-size: 40px;
   color: black;
-  /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
-  font-family: jaf-bernino-sans-condensed, helvetica, arial, sans-serif;
+  font-family: 'Oswald', sans-serif;
+  
+
       /*text-transform: uppercase;*/
   /*font-weight: bold;*/
 }
@@ -104,6 +114,7 @@ footer {
     width: 100%;
     color: blue;
     background-color: red;
+    padding-top: 20px;
 }
 
 
@@ -114,4 +125,36 @@ footer {
   margin: 20px auto;
   padding-bottom: 20px;
   border: 1px solid #707070;
+
 }
+
+select {
+
+font-size: 20px;
+ border: 0;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.loginInput {
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-size: 15px;
+border-radius: 5px;
+max-width: 100px;  
+
+
+}
+
+.dontSeeStateButton {
+  border: none;
+  border-radius: 5px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  
+}
+
+/* pure sauce 
+
+font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif, "Microsoft Yahei";
+
+
+*/
