--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -5,25 +5,23 @@
 
 	<!-- try ng submit with form-->
 	<form ng-submit="changeState(state)">
-		<select ng-change="changeState(state)" name="state" ng-model="state">
+		<select class="loginSelect" ng-change="changeState(state)" name="state" ng-model="state">
 			<option value="">State</option>
 			<option ng-value="state.$id" ng-repeat="state in states">{{state.name}}</option>
 		</select>
 
 	</form>
 	<!--<select  ng-options="state.$id for state in states"></select>-->
-	
-	
-	
-	<form ng-submit="addState(stateName)">
-		<input type="text" placeholder="state..." ng-model="stateName.name">
+
+	<div>
+		<button ng-click="hider()"class="dontSeeStateButton">Don't see your state?</button>
+	</div>
+
+	<form ng-hide="hider" ng-submit="addState(stateName)">
+		<input class="loginInput" type="text" placeholder="add a state" ng-model="stateName.name">
 		<button>Add</button>
 	</form>
-<pre>
-	
-	
-	
-</pre>
-	<div ng-repeat="state in states" style="color: #fff"> <a href="/#/parks/{{state.$id}}">{{state.name}}</a></div>
+
+	<!--<div ng-repeat="state in states" style="color: #fff"> <a href="/#/parks/{{state.$id}}">{{state.name}}</a></div>-->
 
 </div>
