--- a/templates/addParkDir.html
+++ b/templates/addParkDir.html
@@ -10,14 +10,11 @@
 		<!--<input type="text" placeholder="state..." ng-model="newPark.state">-->
 		<h6>Img URL: </h6>
 		<input type="text" placeholder="img url..." ng-model="newPark.imgUrl">
-		<button>Add</button>
+		<button class="buttonDirective">Add</button>
 	</form>
 	
 </div>
 <pre>
-	
-	
-	
 	
 	
 	
