--- a/templates/stateTmpl.html
+++ b/templates/stateTmpl.html
@@ -15,7 +15,7 @@
 			</div>
 			<img ng-src="{{park.imgUrl}}">
 			<br>
-			<div>
+			<div class="submitBreh">
 				 address: {{park.address}}</div>
 		</div>
 
