--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -1,27 +1,29 @@
 <div class="loginBackground">
 
 
+	<div class="goosfraba">
 
+		<!-- try ng submit with form-->
+		<form ng-submit="changeState(state)">
+			<select class="dropdown" class="loginSelect" ng-change="changeState(state)" name="state" ng-model="state">
+				<option  value="">STATE</option>
+				<option ng-value="state.$id" ng-repeat="state in states">{{state.name}}</option>
+			</select>
 
-	<!-- try ng submit with form-->
-	<form ng-submit="changeState(state)">
-		<select class="loginSelect" ng-change="changeState(state)" name="state" ng-model="state">
-			<option value="">State</option>
-			<option ng-value="state.$id" ng-repeat="state in states">{{state.name}}</option>
-		</select>
-
-	</form>
+		</form>
 	<!--<select  ng-options="state.$id for state in states"></select>-->
 
 	<div>
-		<button ng-click="hider()"class="dontSeeStateButton">Don't see your state?</button>
+		<button ng-click="hider()" class="dontSeeStateButton">Don't see your state?</button>
 	</div>
 
 	<form class="hiddenButton" ng-hide="hider" ng-submit="addState(stateName)">
 		<input class="loginInput" type="text" placeholder="add a state" ng-model="stateName.name">
 		<button class="hiddenButton">Add</button>
 	</form>
+	</div>
 
 	<!--<div ng-repeat="state in states" style="color: #fff"> <a href="/#/parks/{{state.$id}}">{{state.name}}</a></div>-->
 
+	<h1 class="loginHeader">skterpark</h1>
 </div>
