fixed my nghide

--- a/templates/loginTmpl.html
+++ b/templates/loginTmpl.html
@@ -17,7 +17,7 @@
 		<!--<select  ng-options="state.$id for state in states"></select>-->
 
 		<div>
-			<button ng-click="hider()" class="dontSeeStateButton">Don't see your state?</button>
+			<button ng-click="hiderd()" class="dontSeeStateButton">Don't see your state?</button>
 		</div>
 
 		<form class="hiddenButton" ng-hide="hider" ng-submit="addState(stateName)">
